--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,20 @@ language: python
 dist: xenial
 sudo: false
 
+cache: pip
+
 python:
   - "3.6"
   - "3.7"
   - 3.8-dev
 
 install:
-  - pip install -r requirements_dev.txt
+  # Strangely enough numpy is already installed on Travis's VMs
+  - pip uninstall -y numpy
   - pip install -e .
+  - pip install -r requirements_dev.txt
 
 script:
   - pytest tests/
   - black --check .
+  - safety check
